docs(java): add recent-java note and java 27 feature coverage